# seccell-seL4_libseccells

./: .gitignore  CMakeLists.txt  README.md
include/seccells/: alloc.h  permissions.h  scthreads.h  seccells.h
src/: alloc.c
src/scthreads/: scthreads.S  scthreads.c
